Adjust schema location resolution to account for jar URLs